--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
   <meta name="robots" content="index, follow">
   <meta name="google-adsense-account" content="ca-pub-4531749081462125">
   <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Centro de Compras - Ofertas do Dia">
+  <meta name="twitter:description" content="O maior portal de compras do Brasil! Encontre as melhores ofertas em eletrônicos, moda, casa e mais.">
+  <meta name="twitter:image" content="logos/logoscentrodecompras.jpeg">
   <title>Centro de Compras - Ofertas do Dia</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4531749081462125" crossorigin="anonymous"></script>
   <link rel="preload" href="logos/logoscentrodecompras.jpeg" as="image">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc9F5z2a/3eO0/5g3d3k9Z6H1f2Y2Z3f4g5h6j7k8l9m0n1p2q3r4t5u6v7x8y9z0==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
   <link rel="icon" type="image/png" sizes="32x32" href="logos/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="logos/favicon-16x16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="logos/apple-touch-icon.png">
@@ -42,12 +45,26 @@
   </nav>
 
   <div class="container">
-    <aside class="sidebar" role="complementary">
+    <button class="sidebar-toggle" aria-controls="sidebar" aria-expanded="false">Mostrar Categorias</button>
+    <aside class="sidebar" id="sidebar" role="complementary">
       <h3>Categorias</h3>
       <ul role="list">
-        <li class="categoria-item ativa" data-categoria="todas" role="listitem"><i class="fas fa-list mr-2"></i>Todas</li>
-        <li class="categoria-item" data-categoria="eletronicos" role="listitem"><i class="fas fa-laptop mr-2"></i>Eletrônicos</li>
-        <!-- Outras categorias -->
+        <li class="categoria-item ativa" data-categoria="todas" role="listitem" tabindex="0"><i class="fas fa-list mr-2"></i>Todas</li>
+        <li class="categoria-item" data-categoria="eletronicos" role="listitem" tabindex="0"><i class="fas fa-laptop mr-2"></i>Eletrônicos</li>
+        <li class="categoria-item" data-categoria="moda" role="listitem" tabindex="0"><i class="fas fa-tshirt mr-2"></i>Moda</li>
+        <li class="categoria-item" data-categoria="fitness" role="listitem" tabindex="0"><i class="fas fa-dumbbell mr-2"></i>Fitness</li>
+        <li class="categoria-item" data-categoria="casa" role="listitem" tabindex="0"><i class="fas fa-home mr-2"></i>Casa</li>
+        <li class="categoria-item" data-categoria="beleza" role="listitem" tabindex="0"><i class="fas fa-magic mr-2"></i>Beleza</li>
+        <li class="categoria-item" data-categoria="esportes" role="listitem" tabindex="0"><i class="fas fa-futbol mr-2"></i>Esportes</li>
+        <li class="categoria-item" data-categoria="livros" role="listitem" tabindex="0"><i class="fas fa-book mr-2"></i>Livros</li>
+        <li class="categoria-item" data-categoria="infantil" role="listitem" tabindex="0"><i class="fas fa-baby mr-2"></i>Infantil</li>
+        <li class="categoria-item" data-categoria="celulares" role="listitem" tabindex="0"><i class="fas fa-mobile-alt mr-2"></i>Celulares</li>
+        <li class="categoria-item" data-categoria="eletrodomesticos" role="listitem" tabindex="0"><i class="fas fa-blender mr-2"></i>Eletrodomésticos</li>
+        <li class="categoria-item" data-categoria="pet" role="listitem" tabindex="0"><i class="fas fa-paw mr-2"></i>Pet</li>
+        <li class="categoria-item" data-categoria="jardinagem" role="listitem" tabindex="0"><i class="fas fa-leaf mr-2"></i>Jardinagem</li>
+        <li class="categoria-item" data-categoria="automotivo" role="listitem" tabindex="0"><i class="fas fa-car mr-2"></i>Automotivo</li>
+        <li class="categoria-item" data-categoria="gastronomia" role="listitem" tabindex="0"><i class="fas fa-utensils mr-2"></i>Gastronomia</li>
+        <li class="categoria-item" data-categoria="games" role="listitem" tabindex="0"><i class="fas fa-gamepad mr-2"></i>Games</li>
       </ul>
     </aside>
 
@@ -64,11 +81,25 @@
         <div class="lojas-parceiras">
           <h3>Lojas Parceiras</h3>
           <div class="grid-lojas">
-            <div class="loja-todas ativa" data-loja="todas"><span>Todas as Lojas</span></div>
-            <div class="loja" data-loja="amazon">
-              <img src="logos/amazon.png" alt="Amazon" loading="lazy" width="100" height="40" style="object-fit: contain;"><span>Amazon</span>
+            <div class="loja-todas ativa" data-loja="todas" tabindex="0"><span>Todas as Lojas</span></div>
+            <div class="loja" data-loja="amazon" tabindex="0">
+              <img src="logos/amazon.png" alt="Amazon" loading="lazy" width="100" height="40"><span>Amazon</span>
             </div>
-            <!-- Outras lojas -->
+            <div class="loja" data-loja="magalu" tabindex="0">
+              <img src="logos/magalu.png" alt="Magalu" loading="lazy" width="100" height="40"><span>Magalu</span>
+            </div>
+            <div class="loja" data-loja="shein" tabindex="0">
+              <img src="logos/shein.png" alt="Shein" loading="lazy" width="100" height="40"><span>Shein</span>
+            </div>
+            <div class="loja" data-loja="shopee" tabindex="0">
+              <img src="logos/shopee.png" alt="Shopee" loading="lazy" width="100" height="40"><span>Shopee</span>
+            </div>
+            <div class="loja" data-loja="mercadolivre" tabindex="0">
+              <img src="logos/mercadolivre.jpg" alt="Mercado Livre" loading="lazy" width="100" height="40"><span>Mercado Livre</span>
+            </div>
+            <div class="loja" data-loja="alibaba" tabindex="0">
+              <img src="logos/alibaba.png" alt="Alibaba" loading="lazy" width="100" height="40"><span>Alibaba</span>
+            </div>
           </div>
         </div>
         <label for="busca" class="sr-only">Busque por produtos</label>
@@ -89,24 +120,40 @@
           <div class="icon"><img src="logos/tiktok.png" alt="TikTok" loading="lazy" width="40" height="40"></div>
           <span>TikTok</span>
         </a>
-        <!-- Outros links sociais -->
+        <a href="https://www.instagram.com/cdccentrodecompras/" target="_blank" rel="noopener noreferrer" aria-label="Siga o Centro de Compras no Instagram">
+          <div class="icon"><img src="logos/Instagram.png" alt="Instagram" loading="lazy" width="40" height="40"></div>
+          <span>Instagram</span>
+        </a>
+        <a href="https://x.com/ComprasCdc" target="_blank" rel="noopener noreferrer" aria-label="Siga o Centro de Compras no X">
+          <div class="icon"><img src="logos/X.png" alt="X" loading="lazy" width="40" height="40"></div>
+          <span>X</span>
+        </a>
+        <a href="https://www.youtube.com/channel/UCaKHlI-hWqwdAXS6Xsv3ZzA" target="_blank" rel="noopener noreferrer" aria-label="Siga o Centro de Compras no YouTube">
+          <div class="icon"><img src="logos/youtube.png" alt="YouTube" loading="lazy" width="40" height="40"></div>
+          <span>YouTube</span>
+        </a>
       </div>
+      <a href="https://api.whatsapp.com/send?phone=5521975179737" class="whatsapp" target="_blank" rel="noopener noreferrer" aria-label="Fale conosco pelo WhatsApp">📲 WhatsApp</a>
+      <a href="https://t.me/centraldecomprascdc" class="telegram" target="_blank" rel="noopener noreferrer" aria-label="Junte-se ao nosso canal no Telegram">📢 Telegram</a>
     </main>
   </div>
 
-  <div class="modal" id="imageModal" role="dialog" aria-modal="true">
-    <button class="modal-close" onclick="closeModal()" aria-label="Fechar modal">✕</button>
+  <div class="modal" id="imageModal" role="dialog" aria-modal="true" aria-label="Carrossel de imagens do produto">
+    <button class="modal-close" aria-label="Fechar modal">✕</button>
     <div class="modal-content">
       <div class="carrossel-imagens" id="modalCarrosselImagens"></div>
-      <button class="carrossel-prev" onclick="moveModalCarrossel(-1)">◄</button>
-      <button class="carrossel-next" onclick="moveModalCarrossel(1)">▶</button>
+      <button class="carrossel-prev" aria-label="Imagem anterior">◄</button>
+      <button class="carrossel-next" aria-label="Próxima imagem">▶</button>
       <div class="carrossel-dots" id="modalCarrosselDots"></div>
     </div>
   </div>
 
   <footer role="contentinfo">
     <p>Todos os direitos reservados <strong>Grupo Centro de Compras "CdC"</strong> © <span id="year"></span></p>
-    <p><a href="politica-privacidade.html">Política de Privacidade</a> | <a href="termos-uso.html">Termos de Uso</a></p>
+    <p>
+      <a href="politica-privacidade.html">Política de Privacidade</a> |
+      <a href="termos-uso.html">Termos de Uso</a>
+    </p>
   </footer>
 
   <div class="robo-assistente">
@@ -117,5 +164,41 @@
   </div>
 
   <script defer src="script.js" media="print" onload="this.media='all'"></script>
+  <script>
+    // Toggle para a sidebar em mobile
+    document.querySelector('.sidebar-toggle').addEventListener('click', () => {
+      const sidebar = document.querySelector('.sidebar');
+      sidebar.classList.toggle('active');
+      const isExpanded = sidebar.classList.contains('active');
+      document.querySelector('.sidebar-toggle').setAttribute('aria-expanded', isExpanded);
+    });
+
+    // Delegação de eventos para categorias
+    document.querySelectorAll('.categoria-item').forEach(item => {
+      item.addEventListener('click', () => filtrarPorCategoria(item.dataset.categoria));
+      item.addEventListener('keydown', (e) => {
+        if (e.key === 'Enter' || e.key === ' ') {
+          e.preventDefault();
+          filtrarPorCategoria(item.dataset.categoria);
+        }
+      });
+    });
+
+    // Delegação de eventos para lojas
+    document.querySelectorAll('.loja, .loja-todas').forEach(loja => {
+      loja.addEventListener('click', () => filtrarPorLoja(loja.dataset.loja));
+      loja.addEventListener('keydown', (e) => {
+        if (e.key === 'Enter' || e.key === ' ') {
+          e.preventDefault();
+          filtrarPorLoja(loja.dataset.loja);
+        }
+      });
+    });
+
+    // Fechar modal com tecla Esc
+    document.addEventListener('keydown', (e) => {
+      if (e.key === 'Escape') closeModal();
+    });
+  </script>
 </body>
 </html>
