--- a/index.html
+++ b/index.html
@@ -1,34 +1,42 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+  <!-- Meta tags para SEO e responsividade -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Encontre as melhores ofertas e promoções no Centro de Compras, o maior portal de compras do Brasil!">
+  <meta name="description" content="Centro de Compras - As melhores ofertas do Brasil em eletrônicos, moda, casa e mais!">
   <meta name="keywords" content="ofertas, promoções, compras online, Brasil, descontos">
   <meta name="robots" content="index, follow">
   <meta name="google-adsense-account" content="ca-pub-4531749081462125">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Centro de Compras - Ofertas do Dia">
-  <meta name="twitter:description" content="O maior portal de compras do Brasil! Encontre as melhores ofertas em eletrônicos, moda, casa e mais.">
+  <meta name="twitter:description" content="Encontre as melhores ofertas no maior portal de compras do Brasil!">
   <meta name="twitter:image" content="logos/logoscentrodecompras.jpeg">
   <title>Centro de Compras - Ofertas do Dia</title>
+
+  <!-- Google AdSense -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4531749081462125" crossorigin="anonymous"></script>
+
+  <!-- Recursos otimizados -->
   <link rel="preload" href="logos/logoscentrodecompras.jpeg" as="image">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc9F5z2a/3eO0/5g3d3k9Z6H1f2Y2Z3f4g5h6j7k8l9m0n1p2q3r4t5u6v7x8y9z0==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
+
+  <!-- Favicons e PWA -->
   <link rel="icon" type="image/png" sizes="32x32" href="logos/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="logos/favicon-16x16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="logos/apple-touch-icon.png">
   <link rel="manifest" href="logos/site.webmanifest">
 </head>
 <body>
+  <!-- Cabeçalho -->
   <header class="site-header" role="banner">
     <div class="logo-container">
       <a href="index.html" aria-label="Voltar para a página inicial do Centro de Compras">
-        <img src="logos/logoscentrodecompras.jpeg" alt="Logotipo do Centro de Compras" id="site-logo-img" width="150" height="50">
+        <img src="logos/logoscentrodecompras.jpeg" alt="Logotipo do Centro de Compras" width="150" height="50">
       </a>
     </div>
     <div class="header-text">
@@ -37,6 +45,7 @@
     </div>
   </header>
 
+  <!-- Navegação -->
   <nav role="navigation">
     <a href="index.html" aria-current="page">Promoções</a>
     <a href="cupom.html">Cupom de Desconto</a>
@@ -44,33 +53,29 @@
     <a href="contato.html">Contato</a>
   </nav>
 
+  <!-- Conteúdo principal -->
   <div class="container">
+    <!-- Botão para toggle da sidebar em mobile -->
     <button class="sidebar-toggle" aria-controls="sidebar" aria-expanded="false">Mostrar Categorias</button>
+
+    <!-- Sidebar com categorias -->
     <aside class="sidebar" id="sidebar" role="complementary">
       <h3>Categorias</h3>
       <ul role="list">
-        <li class="categoria-item ativa" data-categoria="todas" role="listitem" tabindex="0"><i class="fas fa-list mr-2"></i>Todas</li>
-        <li class="categoria-item" data-categoria="eletronicos" role="listitem" tabindex="0"><i class="fas fa-laptop mr-2"></i>Eletrônicos</li>
-        <li class="categoria-item" data-categoria="moda" role="listitem" tabindex="0"><i class="fas fa-tshirt mr-2"></i>Moda</li>
-        <li class="categoria-item" data-categoria="fitness" role="listitem" tabindex="0"><i class="fas fa-dumbbell mr-2"></i>Fitness</li>
-        <li class="categoria-item" data-categoria="casa" role="listitem" tabindex="0"><i class="fas fa-home mr-2"></i>Casa</li>
-        <li class="categoria-item" data-categoria="beleza" role="listitem" tabindex="0"><i class="fas fa-magic mr-2"></i>Beleza</li>
-        <li class="categoria-item" data-categoria="esportes" role="listitem" tabindex="0"><i class="fas fa-futbol mr-2"></i>Esportes</li>
-        <li class="categoria-item" data-categoria="livros" role="listitem" tabindex="0"><i class="fas fa-book mr-2"></i>Livros</li>
-        <li class="categoria-item" data-categoria="infantil" role="listitem" tabindex="0"><i class="fas fa-baby mr-2"></i>Infantil</li>
-        <li class="categoria-item" data-categoria="celulares" role="listitem" tabindex="0"><i class="fas fa-mobile-alt mr-2"></i>Celulares</li>
-        <li class="categoria-item" data-categoria="eletrodomesticos" role="listitem" tabindex="0"><i class="fas fa-blender mr-2"></i>Eletrodomésticos</li>
-        <li class="categoria-item" data-categoria="pet" role="listitem" tabindex="0"><i class="fas fa-paw mr-2"></i>Pet</li>
-        <li class="categoria-item" data-categoria="jardinagem" role="listitem" tabindex="0"><i class="fas fa-leaf mr-2"></i>Jardinagem</li>
-        <li class="categoria-item" data-categoria="automotivo" role="listitem" tabindex="0"><i class="fas fa-car mr-2"></i>Automotivo</li>
-        <li class="categoria-item" data-categoria="gastronomia" role="listitem" tabindex="0"><i class="fas fa-utensils mr-2"></i>Gastronomia</li>
-        <li class="categoria-item" data-categoria="games" role="listitem" tabindex="0"><i class="fas fa-gamepad mr-2"></i>Games</li>
+        <li class="categoria-item ativa" data-categoria="todas" role="listitem" tabindex="0"><i class="fas fa-list"></i> Todas</li>
+        <li class="categoria-item" data-categoria="eletronicos" role="listitem" tabindex="0"><i class="fas fa-laptop"></i> Eletrônicos</li>
+        <li class="categoria-item" data-categoria="moda" role="listitem" tabindex="0"><i class="fas fa-tshirt"></i> Moda</li>
+        <li class="categoria-item" data-categoria="fitness" role="listitem" tabindex="0"><i class="fas fa-dumbbell"></i> Fitness</li>
+        <li class="categoria-item" data-categoria="casa" role="listitem" tabindex="0"><i class="fas fa-home"></i> Casa</li>
+        <!-- Outras categorias podem ser adicionadas -->
       </ul>
     </aside>
 
+    <!-- Conteúdo principal -->
     <main role="main">
       <section>
         <h2>Ofertas do Dia</h2>
+        <!-- Anúncio do AdSense -->
         <ins class="adsbygoogle"
              style="display:inline-block;width:728px;height:90px"
              data-ad-client="ca-pub-4531749081462125"
@@ -78,6 +83,8 @@
         <script>
              (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
+
+        <!-- Lojas parceiras -->
         <div class="lojas-parceiras">
           <h3>Lojas Parceiras</h3>
           <div class="grid-lojas">
@@ -88,33 +95,30 @@
             <div class="loja" data-loja="magalu" tabindex="0">
               <img src="logos/magalu.png" alt="Magalu" loading="lazy" width="100" height="40"><span>Magalu</span>
             </div>
-            <div class="loja" data-loja="shein" tabindex="0">
-              <img src="logos/shein.png" alt="Shein" loading="lazy" width="100" height="40"><span>Shein</span>
-            </div>
-            <div class="loja" data-loja="shopee" tabindex="0">
-              <img src="logos/shopee.png" alt="Shopee" loading="lazy" width="100" height="40"><span>Shopee</span>
-            </div>
-            <div class="loja" data-loja="mercadolivre" tabindex="0">
-              <img src="logos/mercadolivre.jpg" alt="Mercado Livre" loading="lazy" width="100" height="40"><span>Mercado Livre</span>
-            </div>
-            <div class="loja" data-loja="alibaba" tabindex="0">
-              <img src="logos/alibaba.png" alt="Alibaba" loading="lazy" width="100" height="40"><span>Alibaba</span>
-            </div>
+            <!-- Outras lojas podem ser adicionadas -->
           </div>
         </div>
+
+        <!-- Barra de busca -->
         <label for="busca" class="sr-only">Busque por produtos</label>
         <input type="text" id="busca" placeholder="Busque por produtos..." class="barra-busca">
         <div id="busca-feedback" class="busca-feedback"></div>
         <div class="loading-spinner" id="loading-spinner"></div>
+
+        <!-- Grid de produtos -->
         <div class="grid-produtos" id="grid-produtos"></div>
         <p class="mensagem-vazia" id="mensagem-vazia" style="display: none;">Nenhum produto encontrado.</p>
         <p class="error-message" id="error-message" style="display: none;"></p>
+
+        <!-- Paginação -->
         <div class="paginacao" id="paginacao">
           <button id="prev-page" disabled>Anterior</button>
           <span id="page-info">Página 1</span>
           <button id="next-page">Próxima</button>
         </div>
       </section>
+
+      <!-- Links sociais -->
       <div class="social-links">
         <a href="https://www.tiktok.com/@cdc.centraldecompras" target="_blank" rel="noopener noreferrer" aria-label="Siga o Centro de Compras no TikTok">
           <div class="icon"><img src="logos/tiktok.png" alt="TikTok" loading="lazy" width="40" height="40"></div>
@@ -124,20 +128,16 @@
           <div class="icon"><img src="logos/Instagram.png" alt="Instagram" loading="lazy" width="40" height="40"></div>
           <span>Instagram</span>
         </a>
-        <a href="https://x.com/ComprasCdc" target="_blank" rel="noopener noreferrer" aria-label="Siga o Centro de Compras no X">
-          <div class="icon"><img src="logos/X.png" alt="X" loading="lazy" width="40" height="40"></div>
-          <span>X</span>
-        </a>
-        <a href="https://www.youtube.com/channel/UCaKHlI-hWqwdAXS6Xsv3ZzA" target="_blank" rel="noopener noreferrer" aria-label="Siga o Centro de Compras no YouTube">
-          <div class="icon"><img src="logos/youtube.png" alt="YouTube" loading="lazy" width="40" height="40"></div>
-          <span>YouTube</span>
-        </a>
+        <!-- Outros links sociais -->
       </div>
-      <a href="https://api.whatsapp.com/send?phone=5521975179737" class="whatsapp" target="_blank" rel="noopener noreferrer" aria-label="Fale conosco pelo WhatsApp">📲 WhatsApp</a>
-      <a href="https://t.me/centraldecomprascdc" class="telegram" target="_blank" rel="noopener noreferrer" aria-label="Junte-se ao nosso canal no Telegram">📢 Telegram</a>
+
+      <!-- WhatsApp e Telegram -->
+      <a href="https://api.whatsapp.com/send?phone=5521975179737" class="whatsapp" target="_blank" rel="noopener noreferrer" aria-label="Fale conosco pelo WhatsApp">WhatsApp</a>
+      <a href="https://t.me/centraldecomprascdc" class="telegram" target="_blank" rel="noopener noreferrer" aria-label="Junte-se ao nosso canal no Telegram">Telegram</a>
     </main>
   </div>
 
+  <!-- Modal para imagens -->
   <div class="modal" id="imageModal" role="dialog" aria-modal="true" aria-label="Carrossel de imagens do produto">
     <button class="modal-close" aria-label="Fechar modal">✕</button>
     <div class="modal-content">
@@ -148,6 +148,7 @@
     </div>
   </div>
 
+  <!-- Rodapé -->
   <footer role="contentinfo">
     <p>Todos os direitos reservados <strong>Grupo Centro de Compras "CdC"</strong> © <span id="year"></span></p>
     <p>
@@ -156,6 +157,7 @@
     </p>
   </footer>
 
+  <!-- Robô assistente -->
   <div class="robo-assistente">
     <a href="https://api.whatsapp.com/send?phone=5521975179737" target="_blank" rel="noopener noreferrer" aria-label="Fale conosco pelo WhatsApp">
       <img src="imagens/robo.jpg" alt="Robô Assistente" class="robo-imagem" loading="lazy" width="60" height="60">
@@ -163,42 +165,6 @@
     </a>
   </div>
 
-  <script defer src="script.js" media="print" onload="this.media='all'"></script>
-  <script>
-    // Toggle para a sidebar em mobile
-    document.querySelector('.sidebar-toggle').addEventListener('click', () => {
-      const sidebar = document.querySelector('.sidebar');
-      sidebar.classList.toggle('active');
-      const isExpanded = sidebar.classList.contains('active');
-      document.querySelector('.sidebar-toggle').setAttribute('aria-expanded', isExpanded);
-    });
-
-    // Delegação de eventos para categorias
-    document.querySelectorAll('.categoria-item').forEach(item => {
-      item.addEventListener('click', () => filtrarPorCategoria(item.dataset.categoria));
-      item.addEventListener('keydown', (e) => {
-        if (e.key === 'Enter' || e.key === ' ') {
-          e.preventDefault();
-          filtrarPorCategoria(item.dataset.categoria);
-        }
-      });
-    });
-
-    // Delegação de eventos para lojas
-    document.querySelectorAll('.loja, .loja-todas').forEach(loja => {
-      loja.addEventListener('click', () => filtrarPorLoja(loja.dataset.loja));
-      loja.addEventListener('keydown', (e) => {
-        if (e.key === 'Enter' || e.key === ' ') {
-          e.preventDefault();
-          filtrarPorLoja(loja.dataset.loja);
-        }
-      });
-    });
-
-    // Fechar modal com tecla Esc
-    document.addEventListener('keydown', (e) => {
-      if (e.key === 'Escape') closeModal();
-    });
-  </script>
+  <script defer src="script.js"></script>
 </body>
 </html>
